--- a/scss/components/_alliance_attacks.scss
+++ b/scss/components/_alliance_attacks.scss
@@ -37,7 +37,7 @@
 			  font-size: $text-small;
 			  font-weight: bold;
 			  padding: 3.5px 7px;
-			  background: #171e27;
+			  background: #171E27;
 			}
 		  }
 
