--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -152,7 +152,7 @@
 			}
 
 			+ div > a.calcz {
-			  color: #32ab52 !important;
+			  color: #32AB52 !important;
 			  font-family: inherit;
 			  font-size: $text-small;
 			  font-weight: bold;
