--- a/scss/components/_galaxy_forum.scss
+++ b/scss/components/_galaxy_forum.scss
@@ -237,7 +237,7 @@ table.mceEditor {
 		background: $color-secondary !important;
 
 		a {
-		  background: #ccc !important;
+		  background: #CCC !important;
 		}
 	  }
 
