--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -71,7 +71,7 @@
 		text-transform: uppercase;
 		padding: 3.5px 7px;
 		display: block;
-		background: #19222b;
+		background: #19222B;
 		border-bottom: 1px solid transparent;
 		border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 100%);
 		border-image-slice: 1;
