--- a/scss/components/_fleets.scss
+++ b/scss/components/_fleets.scss
@@ -159,7 +159,7 @@
 
 	+ p {
 	  &.center.superhighlight {
-		color: #fff;
+		color: #FFF;
 		font-size: 13px;
 		display: flex;
 		align-items: center;
