--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -27,7 +27,7 @@
 	margin-left: 5px;
 
 	&:active {
-	  background: linear-gradient(135deg, #598aad 0%, #000 100%);
+	  background: linear-gradient(135deg, #598AAD 0%, #000 100%);
 	}
   }
 }
