--- a/scss/components/_scans.scss
+++ b/scss/components/_scans.scss
@@ -1,4 +1,9 @@
 #page_scan {
+  #side_select_box {
+	top: 50% !important;
+	left: 50% !important;
+  }
+
   div#full_page {
 	display: table;
 	max-width: 900px;
