--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,5 @@
 /*!
-*  v5.6
+*  v5.7
 *  This skin addon is designed to run with the r32 skin selected in PA preferences.
 *
 *  If this skin customisation adds even a tiny bit of enjoyment to your gaming experience it was well worth the countless hours of development.
@@ -86,6 +86,7 @@
 @import 'lib/animations';
 //
 @import 'components/r32-specific';
+@import 'components/admin';
 
 /*!
 *
