--- a/scss/components/_admin.scss
+++ b/scss/components/_admin.scss
@@ -92,6 +92,14 @@
 	}
   }
 
+  #maintext {
+	overflow: auto;
+
+	p {
+	  text-wrap: auto;
+	}
+  }
+
   #contents {
 	width: calc(100% - 182px) !important;
 
