admin page edits

--- a/scss/components/_research_construction_waves.scss
+++ b/scss/components/_research_construction_waves.scss
@@ -169,7 +169,7 @@
 
 		  + p {
 			font-size: $text-default;
-			line-height: $text-default;
+			line-height: 1.2;
 			text-align: left;
 			padding: 0 0 14px;
 		  }
